profile and following page lists posts + posts link to user profile

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -21,22 +21,7 @@
         </div>
     </section>
       {% endif %}
-      {% for post in posts %}
-        <!-- TODO wrap in .row? -->
-        <section>
-          <ul class="list-group mt-3">
-            <!-- TODO link to edit URL -->
-            <li href="#" class="list-group-item">
-              <div class="d-flex w-100 justify-content-between">
-                <h4 class="mb-1">@{{post.author.username}}</h4>
-                <small class="text-muted">{{post.date_created}}</small>
-              </div>
-              <p class="mb-1">{{post.content}}</p>
-              <p class="card-text"><small class="text-muted">{{post.likes.count}} likes</small></p>
-            </li>
-          </ul></section>
-      {% empty %}
-          <p>No posts.</p>
-      {% endfor %}
+      {% include "network/posts.html" %}
+      {% include "network/posts_pagination.html" %}
   </div>
 {% endblock %}
