--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -44,5 +44,6 @@
       {% block body %}
       {% endblock %}
     </div>
+    <script src="{% static 'network/main.js' %}"></script>
   </body>
 </html>
